# wl-screenrec_GUI

./: .gitmodules  CMakeLists.txt  README.md  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  reactcmd.cpp  reactcmd.h  resources.qrc  showframe.cpp  showframe.h  tool  tool.cpp
